--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     
 
     <!-- JavaScript -->
-    <%= javascript_importmap_tags data: { turbo_track: "reload" } %>
+    <%= javascript_importmap_tags %>
     <%= yield :recaptcha_script %>
   </head>
 
