--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
-<div class="message-row <%= is_current_user_message ? 'sent' : 'received' %> <%= local_assigns[:new_message] ? 'new-message' : '' %>">
+<div id="<%= dom_id(message) %>" class="message-row <%= is_current_user_message ? 'sent' : 'received' %> <%= local_assigns[:new_message] ? 'new-message' : '' %>">
   <div class="message-content">
     <div class="message-sender-name <%= is_current_user_message ? 'text-right' : 'text-left' %>">
       <%= message.user.display_name %>
@@ -10,6 +10,18 @@
       <span class="message-timestamp"><%= message.created_at.strftime("%H:%M") %></span>
       <% if is_current_user_message && message.read_at.present? %>
         <span class="read-status">Read</span>
+      <% end %>
+      <% if is_current_user_message %>
+        <span class="message-actions flex space-x-2">
+          <%= link_to edit_conversation_message_path(message.conversation, message), class: "edit-link text-blue-500 hover:text-blue-700", data: { turbo_frame: "_top" } do %>
+            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L8.5 21H3v-5.5L15.732 3.732z"/></svg>
+            <span class="sr-only">Edit</span>
+          <% end %>
+          <%= link_to conversation_message_path(message.conversation, message), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "delete-link text-red-500 hover:text-red-700" do %>
+            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6M1 7h22M9 3h6a1 1 0 011 1v2H8V4a1 1 0 011-1z"/></svg>
+            <span class="sr-only">Delete</span>
+          <% end %>
+        </span>
       <% end %>
     </div>
   </div>
