fix: guard profile country when column missing

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -26,7 +26,10 @@
     <%= form_with model: current_user, url: profile_path, method: :patch, local: true do |f| %>
       <div class="mb-4">
         <%= f.label :country, "Country", class: "block text-gray-700 font-medium mb-2" %>
-        <%= f.select :country, options_for_select(Carmen::Country.all.map { |c| [c.name, c.alpha_2_code] }, current_user.country), { include_blank: 'Select your country' }, { class: "block w-full px-3 py-2 bg-white border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500", id: "country_select" } %>
+        <%= f.select :country,
+                     options_for_select(Carmen::Country.all.map { |c| [c.name, c.alpha_2_code] }, current_user.try(:country)),
+                     { include_blank: 'Select your country' },
+                     { class: "block w-full px-3 py-2 bg-white border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500", id: "country_select" } %>
       </div>
       <%= f.submit "Update Country", class: "bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600" %>
     <% end %>
@@ -65,7 +68,7 @@
             </div>
           <% end %>
 
-          <% if @user.country.present? %>
+          <% if @user.try(:country).present? %>
             <p class="text-sm text-gray-500 mb-2">Country: <%= Carmen::Country.coded(@user.country).name %></p>
           <% end %>
           <% unless @is_own_profile %>
